full-moon/tests/cases/fail/parser/generic-for-3/error_display.snap
---
source: full-moon/tests/fail_cases.rs
assertion_line: 56
expression: "String::from_utf8(output.into_inner()).unwrap()"
input_file: full-moon/tests/cases/fail/parser/generic-for-3
---
error[ast]: unexpected token ``.  (expected `end` to close block)
  ┌─ source.lua:1:21
  │
1 │ for x in pairs(y) do
  │                     ^


